// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers should apply a number display function: number display function result 1`] = `
R {
  "_value": 11,
}
`;

exports[`Helpers should expose a window object: limited window object 1`] = `
{
  "DEV_MODE": false,
  "PROD_MODE": false,
  "REVIEW_MODE": false,
  "TEST_MODE": true,
  "UI_DEPLOY_PATH_LINK_PREFIX": "",
  "UI_DEPLOY_PATH_PREFIX": "",
  "UI_DISABLED": false,
  "UI_DISABLED_GRAPH": false,
  "UI_DISABLED_NOTIFICATIONS": false,
  "UI_DISABLED_TABLE": false,
  "UI_DISABLED_TABLE_INSTANCES": false,
  "UI_DISABLED_TABLE_SUBSCRIPTIONS": false,
  "UI_DISABLED_TOOLBAR": false,
  "UI_DISABLED_TOOLBAR_GROUP_VARIANT": false,
  "UI_DISPLAY_CONFIG_NAME": "Subscriptions",
  "UI_DISPLAY_NAME": "Subscriptions",
  "UI_DISPLAY_START_NAME": "Subscriptions",
  "UI_LINK_CONTACT_US": "https://access.redhat.com/account-team",
  "UI_LINK_LEARN_MORE": "https://access.redhat.com/documentation/en-us/subscription_central/2023/html/getting_started_with_the_subscriptions_service/con-how-does-subscriptionwatch-show-data_assembly-viewing-understanding-subscriptionwatch-data-ctxt/",
  "UI_LINK_REPORT_ACCURACY_RECOMMENDATIONS": "https://access.redhat.com/solutions/subscription-watch-mismatch",
  "UI_LOCALE_DEFAULT": "en-US",
  "UI_LOCALE_DEFAULT_DESC": "English",
  "UI_LOGGER_FILE": "curiosity_debug_log_{0}.json",
  "UI_LOGGER_ID": "curiosity",
  "UI_NAME": "subscriptions",
  "UI_PATH": "/apps/subscriptions/",
  "UI_VERSION": "0.0.0.0000000",
  "UI_WINDOW_ID": "curiosity",
  "aggregatedError": [Function],
  "browserExpose": [Function],
  "generateHash": [Function],
  "generateId": [Function],
  "isDate": [Function],
  "isPromise": [Function],
  "lorem": "ipsum",
  "memo": [Function],
  "noop": [Function],
  "noopPromise": Promise {},
  "numberDisplay": [Function],
  "objFreeze": [Function],
  "setImmutableData": [Function],
}
`;

exports[`Helpers should expose a window object: window object 1`] = `
{
  "DEV_MODE": false,
  "PROD_MODE": false,
  "REVIEW_MODE": false,
  "TEST_MODE": true,
  "UI_DEPLOY_PATH_LINK_PREFIX": "",
  "UI_DEPLOY_PATH_PREFIX": "",
  "UI_DISABLED": false,
  "UI_DISABLED_GRAPH": false,
  "UI_DISABLED_NOTIFICATIONS": false,
  "UI_DISABLED_TABLE": false,
  "UI_DISABLED_TABLE_INSTANCES": false,
  "UI_DISABLED_TABLE_SUBSCRIPTIONS": false,
  "UI_DISABLED_TOOLBAR": false,
  "UI_DISABLED_TOOLBAR_GROUP_VARIANT": false,
  "UI_DISPLAY_CONFIG_NAME": "Subscriptions",
  "UI_DISPLAY_NAME": "Subscriptions",
  "UI_DISPLAY_START_NAME": "Subscriptions",
  "UI_LINK_CONTACT_US": "https://access.redhat.com/account-team",
  "UI_LINK_LEARN_MORE": "https://access.redhat.com/documentation/en-us/subscription_central/2023/html/getting_started_with_the_subscriptions_service/con-how-does-subscriptionwatch-show-data_assembly-viewing-understanding-subscriptionwatch-data-ctxt/",
  "UI_LINK_REPORT_ACCURACY_RECOMMENDATIONS": "https://access.redhat.com/solutions/subscription-watch-mismatch",
  "UI_LOCALE_DEFAULT": "en-US",
  "UI_LOCALE_DEFAULT_DESC": "English",
  "UI_LOGGER_FILE": "curiosity_debug_log_{0}.json",
  "UI_LOGGER_ID": "curiosity",
  "UI_NAME": "subscriptions",
  "UI_PATH": "/apps/subscriptions/",
  "UI_VERSION": "0.0.0.0000000",
  "UI_WINDOW_ID": "curiosity",
  "aggregatedError": [Function],
  "browserExpose": [Function],
  "generateHash": [Function],
  "generateId": [Function],
  "isDate": [Function],
  "isPromise": [Function],
  "lorem": "ipsum",
  "memo": [Function],
  "noop": [Function],
  "noopPromise": Promise {},
  "numberDisplay": [Function],
  "objFreeze": [Function],
  "setImmutableData": [Function],
}
`;

exports[`Helpers should handle use aggregate error, or fallback: emulated aggregate error 1`] = `
{
  "aggregated": [AggregateError: testing aggregated],
  "errors": [
    [Error: lorem ipsum],
    [Error: dolor sit],
  ],
  "isEmulated": true,
  "name": "AggregateError",
}
`;

exports[`Helpers should have specific functions: helpers 1`] = `
{
  "DEV_MODE": false,
  "PROD_MODE": false,
  "REVIEW_MODE": false,
  "TEST_MODE": true,
  "UI_DEPLOY_PATH_LINK_PREFIX": "",
  "UI_DEPLOY_PATH_PREFIX": "",
  "UI_DISABLED": false,
  "UI_DISABLED_GRAPH": false,
  "UI_DISABLED_NOTIFICATIONS": false,
  "UI_DISABLED_TABLE": false,
  "UI_DISABLED_TABLE_INSTANCES": false,
  "UI_DISABLED_TABLE_SUBSCRIPTIONS": false,
  "UI_DISABLED_TOOLBAR": false,
  "UI_DISABLED_TOOLBAR_GROUP_VARIANT": false,
  "UI_DISPLAY_CONFIG_NAME": "Subscriptions",
  "UI_DISPLAY_NAME": "Subscriptions",
  "UI_DISPLAY_START_NAME": "Subscriptions",
  "UI_LINK_CONTACT_US": "https://access.redhat.com/account-team",
  "UI_LINK_LEARN_MORE": "https://access.redhat.com/documentation/en-us/subscription_central/2023/html/getting_started_with_the_subscriptions_service/con-how-does-subscriptionwatch-show-data_assembly-viewing-understanding-subscriptionwatch-data-ctxt/",
  "UI_LINK_REPORT_ACCURACY_RECOMMENDATIONS": "https://access.redhat.com/solutions/subscription-watch-mismatch",
  "UI_LOCALE_DEFAULT": "en-US",
  "UI_LOCALE_DEFAULT_DESC": "English",
  "UI_LOGGER_FILE": "curiosity_debug_log_{0}.json",
  "UI_LOGGER_ID": "curiosity",
  "UI_NAME": "subscriptions",
  "UI_PATH": "/apps/subscriptions/",
  "UI_VERSION": "0.0.0.0000000",
  "UI_WINDOW_ID": "curiosity",
  "aggregatedError": [Function],
  "browserExpose": [Function],
  "generateHash": [Function],
  "generateId": [Function],
  "isDate": [Function],
  "isPromise": [Function],
  "memo": [Function],
  "noop": [Function],
  "noopPromise": Promise {},
  "numberDisplay": [Function],
  "objFreeze": [Function],
  "setImmutableData": [Function],
}
`;

exports[`Helpers should produce an immutable like object: clone 1`] = `
{
  "dolor": {
    "hello": [
      "world",
      "clone",
    ],
    "sit": {
      "lorem": "ipsum",
    },
  },
  "lorem": "ipsum",
}
`;

exports[`Helpers should produce an immutable like object: delete property 1`] = `"Cannot delete property 'sit' of #<Object>"`;

exports[`Helpers should produce an immutable like object: set nested property 1`] = `"Cannot assign to read only property 'lorem' of object '#<Object>'"`;

exports[`Helpers should produce an immutable like object: set property 1`] = `"Cannot assign to read only property 'lorem' of object '#<Object>'"`;

exports[`Helpers should produce an immutable like object: shallow clone 1`] = `"Cannot add property 1, object is not extensible"`;

exports[`Helpers should produce an immutable like object: update nested property list 1`] = `"Cannot add property 1, object is not extensible"`;

exports[`Helpers should produce an immutable like object: update nested property list length 1`] = `"Cannot assign to read only property 'length' of object '[object Array]'"`;

exports[`Helpers should produce an immutable like object: update nested property list values 1`] = `"Cannot delete property '0' of [object Array]"`;

exports[`Helpers should support generated consistent hashes from objects, primitive values: hash, object and primitive values 1`] = `
{
  "valueArray": "c259998330",
  "valueArrayConfirmSort": true,
  "valueArraySort": "c2035003770",
  "valueBoolFalse": "c-1246907498",
  "valueBoolTrue": "c2039105809",
  "valueFloat": "c-1391273944",
  "valueFunctionConfirm": true,
  "valueFunctionHelloWorld": "c35043341",
  "valueFunctionLoremIpsum": "c-1136041991",
  "valueInt": "c-473020316",
  "valueNull": "c1962518561",
  "valueObject": "c-2072832499",
  "valueObjectAgain": "c-1533979740",
  "valueObjectConfirm": true,
  "valueObjectConfirmSort": true,
  "valueObjectConfirmSortDiff": true,
  "valueSet": "c-1025593733",
  "valueSetConfirmSort": true,
  "valueSetSort": "c-1025593733",
  "valueSymbol": "c1230539041",
  "valueUndefined": "c-1699714469",
}
`;
